experimental image support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.4.0)
 
 project(srf)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb -Wall -fsanitize=address")
+
 # Find source files
 file(GLOB SOURCES src/*.c src/formats/*.c)
 
